Revision history for Perl extension Text-Markup.

0.12
      - Documented that the `file` parameter to `parse()` is required.
      - Added MultiMarkdown support.

0.11  2011-02-22T22:41:15
      - Added list of supported markups to the README.
      - Fixed test failures on Perls earlier than 5.12.

0.10  2011-02-22T19:45:27
      - Initial version. Includes parsers for:
        + HTML
        + Markdown
        + MediaWiki
        + Pod
        + Textile
        + Trac