@@ -3,6 +3,8 @@ Revision history for Perl extension Text-Markup.
 0.12
       - Documented that the `file` parameter to `parse()` is required.
       - Added MultiMarkdown support.
+      - Fixed test failure in `t/formats.t` when no supported markup parser is
+        installed.
 
 0.11  2011-02-22T22:41:15
       - Added list of supported markups to the README.
